outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-25_17-01-16/evaluations/problem_eval5942863072942487365_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    defined as a combination of distance to the current node and a weighted distance to the destination, scaled by a factor that increases the influence of the destination as the number of remaining nodes grows, ensuring a smooth transition from local to global focus.}
                                                                                                                                                                                                                                                                            ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    defined as a combination of distance to the current node and a weighted distance to the destination, scaled by a factor that increases the influence of the destination as the number of remaining nodes grows, ensuring a smooth transition from local to global focus.}
                                                                                                                                                                                                                                                                            ^
SyntaxError: unmatched '}'
